replaced wrong format quotations

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="et">
     <head>
     <meta charset="ISO 639-1">
-    <meta name="description" content=“Õpime veebitehnoloogiat“ />
-    <meta name=“keywords” content=“HTML, CSS” />
-    <meta name="author" content=“arvutigraafika” />
+    <meta name="description" content="Õpime veebitehnoloogiat" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="author" content="arvutigraafika" />
     <title>title</title>
     <link rel="stylesheet" href="style.css">
 <style>
