--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="et">
     <head>
-    <meta charset="ISO 639-1">
-    <meta name="description" content="Õpime veebitehnoloogiat" />
-    <meta name="keywords" content="HTML, CSS" />
-    <meta name="author" content="arvutigraafika" />
-    <title>12.12.2024 Ülesanne</title>
-    <link rel="stylesheet" href="style.css">
-
+        <meta charset="ISO 639-1">
+        <meta name="description" content="Õpime veebitehnoloogiat" />
+        <meta name="keywords" content="HTML, CSS" />
+        <meta name="author" content="arvutigraafika" />
+        <title>12.12.2024 Ülesanne</title>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="header">
-    <h1>My Website</h1>
-    <p>Resize the browser window to see the effect.</p>
+    <h1>Beginner Linux Distributions</h1>
+    <p>List of distributions to pick as a beginner.</p>
 </div>
 
 <div class="topnav">
-    <a href="#">Link</a>
+    <a href="index.html">Home</a>
     <a href="#">Link</a>
     <a href="#">Link</a>
     <a href="#" style="float:right">Link</a>
@@ -28,6 +27,14 @@
     <div class="card">
         <h2>TITLE HEADING</h2>
         <h5>Title description, Dec 7, 2017</h5>
+        <div class="fakeimg" style="height:200px;">Image</div>
+        <p>Some text..</p>
+        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
+
+    <div class="card">
+        <h2>TITLE HEADING</h2>
+        <h5>Title description, Sep 2, 2017</h5>
         <div class="fakeimg" style="height:200px;">Image</div>
         <p>Some text..</p>
         <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
