--- a/index.html
+++ b/index.html
@@ -7,122 +7,16 @@
   	<meta name="author" content="arvutigraafika" />
     <title>Distros</title>
     <link rel="stylesheet" href="style.css">
-<!--
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial;
-  padding: 10px;
-  background: #f1f1f1;
-}
-
-/* Header/Blog Title */
-.header {
-  padding: 30px;
-  text-align: center;
-  background: white;
-}
-
-.header h1 {
-  font-size: 50px;
-}
-
-/* Style the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {   
-  float: left;
-  width: 75%;
-}
-
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
-  background-color: #f1f1f1;
-  padding-left: 20px;
-}
-
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Add a card effect for articles */
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-/* Clear floats after the columns */
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
-}
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
-  }
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .topnav a {
-    float: none;
-    width: 100%;
-  }
-}
-</style>
--->
 </head>
 <body>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>Resize the browser window to see the effect.</p>
+  <h1>Beginner Linux Distros</h1>
+  <p>How to choose a distro for a beginner.</p>
 </div>
 
 <div class="topnav">
-  <a href="#">Link</a>
+  <a href="index.html">Home</a>
   <a href="#">Link</a>
   <a href="#">Link</a>
   <a href="#" style="float:right">Link</a>
@@ -131,19 +25,19 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <h2>LINUX MINT</h2>
+      <h5>Dec 12, 2024</h5>
+      <img src="mint.png" alt="Linux Mint">
+      <p>Coming from Windows?</p>
+      <p><a href="https://www.linuxmint.com/">Linux Mint</a> has the most familiar user interface to peaople coming from Windows. Linux Mint is also renowned for it's user friendliness - it doesn't require the user to be familiar with the terminal to do simple tasks suh as replacing the wallpaper or changing system font.</p>
     </div>
 
     <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
+      <h2>Nobara Linux</h2>
+      <h5>Dec 12, 2024</h5>
+      <img src="#" alt="Nobara Linux">
       <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p></p>
     </div>
   </div>
 
@@ -151,19 +45,13 @@ body {
     <div class="card">
       <h2>About Me</h2>
       <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-
-    <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
+      <p>A person who likes privacy and despises spyware (like Windows).</p>
     </div>
 
     <div class="card">
       <h3>Follow Me</h3>
-      <p>Some text..</p>
+      <a href="https://lemm.ee/u/SeekPie">SeekPie@lemm.ee</a>
+      <a href="https://github.com/PieSeek">GitHub</a>
     </div>
   </div>
 </div>
