License, 2nd post and image

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </div>
 
     <div class="card">
-      <h2>Nobara Linux</h2>
+      <h2>POP!_OS</h2>
       <h5>Dec 12, 2024</h5>
-      <img src="#" alt="Nobara Linux">
-      <p>Some text..</p>
-      <p></p>
+      <img src="pop.png" alt="Pop!_OS">
+      <p>On a laptop?</p>
+      <p><a href="https://pop.system76.com/">Pop!_OS</a> is best for laptops. It uses the <a href="https://www.gnome.org/">GNOME</a> desktop environment and adds their own spin on it. It is very user-friendly and beacuse of it's popularity, it has better support than samller distros. </p>
     </div>
   </div>
 
@@ -57,7 +57,7 @@
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2><a href="https://github.com/PieSeek/12-12-2024_ylesanne/blob/main/LICENSE">GPLv3</a></h2>
 </div>
 
 </body>
