--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="card">
       <h2>LINUX MINT</h2>
       <h5>Dec 12, 2024</h5>
-      <img src="mint.png" height="200 px" alt="Linux Mint">
+      <img src="mint.png" height=23.1% alt="Linux Mint">
       <p>Coming from Windows?</p>
       <p><a href="https://www.linuxmint.com/">Linux Mint</a> has the most familiar user interface to peaople coming from Windows. Linux Mint is also renowned for it's user friendliness - it doesn't require the user to be familiar with the terminal to do simple tasks suh as replacing the wallpaper or changing system font.</p>
     </div>
@@ -35,7 +35,7 @@
     <div class="card">
       <h2>POP!_OS</h2>
       <h5>Dec 12, 2024</h5>
-      <img src="pop.png" height="200 px" alt="Pop!_OS">
+      <img src="pop.png" height=42.2% alt="Pop!_OS">
       <p>On a laptop?</p>
       <p><a href="https://pop.system76.com/">Pop!_OS</a> is best for laptops. It uses the <a href="https://www.gnome.org/">GNOME</a> desktop environment and adds their own spin on it. It is very user-friendly and beacuse of it's popularity, it has better support than samller distros. </p>
     </div>
