--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="card">
       <h3>Follow Me</h3>
-      <a href="https://lemm.ee/u/SeekPie">SeekPie@lemm.ee</a>
+      <a href="https://lemm.ee/u/SeekPie">SeekPie@lemm.ee</a><br>
       <a href="https://github.com/PieSeek">GitHub</a>
     </div>
   </div>
