--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h5>Dec 12, 2024</h5>
       <img src="pop.png" height=42.2% alt="Pop!_OS">
       <p>On a laptop?</p>
-      <p><a href="https://pop.system76.com/">Pop!_OS</a> is best for laptops. It uses the <a href="https://www.gnome.org/">GNOME</a> desktop environment and adds their own spin on it. It is very user-friendly and beacuse of it's popularity, it has better support than samller distros. </p>
+      <p><a href="https://pop.system76.com/">Pop!_OS</a> is best for laptops. It uses the <a href="https://www.gnome.org/">GNOME</a> desktop environment and adds their own spin on it. It is very user-friendly and beacuse of its popularity, it has better support than samller distros. </p>
     </div>
   </div>
 
