--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div class="card">
       <h3>Follow Me</h3>
       <a href="https://lemm.ee/u/SeekPie">
-        <img src="lemmy.png" alt="Lemmy" width=25px height=25px>
+        <img src="lemmy.png" alt="Lemmy" width="25" height="25">
       </a><br>
       <a href="https://github.com/PieSeek">
-        <img src="github.png" alt="GitHub" width=25px height=25px>
+        <img src="github.png" alt="GitHub" width="25" height="25">
       </a>
     </div>
   </div>
