--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div class="card">
       <h3>Follow Me</h3>
       <a href="https://lemm.ee/u/SeekPie">
-        <img src="lemmy.png" alt="Lemmy" width="90" height="75" style="text-align: center;">
+        <img src="lemmy.png" alt="Lemmy" width="90" height="75">
       </a><br>
       <a href="https://github.com/PieSeek">
-        <img src="github.png" alt="GitHub" width="75" height="75" style="text-align: center;">
+        <img src="github.png" alt="GitHub" width="75" height="75">
       </a>
     </div>
   </div>
